--- a/src/app/components/newportfolio/newportfolio.component.html
+++ b/src/app/components/newportfolio/newportfolio.component.html
@@ -1,12 +1,13 @@
-<div class="hero min-h-screen" style="background-image: url(https://www.oberlo.com/media/1631547010-portfolio4.png);">
+<div class="hero min-h-screen" style="background-image: url('../../../assets/FondoPortfolio.jpeg');">
   <div class="hero-overlay bg-opacity-15"></div>
   <div class="hero-content text-center top-3 text-neutral-content">
     <div class="max-w-md">
       <div class="mt-64">
-        <h1 class="mb-3 text-slate-600 font-extrabold text-3xl ">Fco Javier Gómez García.</h1>
+        <h1 class="mb-5 text-cyan-700 font-extrabold text-5xl ">PORTFOLIO</h1>
+        <h1 class="mb-3 text-cyan-600 font-extrabold text-3xl ">Fco Javier Gómez García.</h1>
       </div>
       <button type="button"
-       class="btn btn-active text-slate-600  w-4/5 text-3xl font-extrabold" routerLink="/folio">Start</button>
+       class="btn btn-active text-cyan-600  w-4/5 text-2xl font-extrabold" routerLink="/folio">Start</button>
     </div>
   </div>
 </div>
