--- a/src/app/components/folio/folio.component.html
+++ b/src/app/components/folio/folio.component.html
@@ -135,7 +135,7 @@
             <img src="../../../assets/Angular1.png" alt="Drink" />
         </div>
         <div class="h-96 carousel-item">
-            <img src="../../../assets/ImagenJavaSE.png" alt="Drink" />
+            <img src="../../../assets/Angular.png" alt="Drink" />
         </div>
         <div class="h-96 carousel-item">
             <img src="../../../assets/Python.png" alt="Drink" />
@@ -180,8 +180,8 @@
             </div>
             <div class="space-y-4">
                 <h3 class="text-xl font-extrabold mb-2">Contact Information</h3>
-                <p><span class="font-extrabold">Email:</span> javierprogrameitor.gmail</p>
-                <p><span class="font-extrabold">Phone:</span>665467980</p>
+                <p><span class="font-extrabold">Email:</span> javierprogrameitor@gmail.com</p>
+                <p><span class="font-extrabold">Phone:</span>665935697</p>
                 <p><span class="font-extrabold">Address:</span> Cuba nº9, Talavera`s Real, Spain</p>
                 <div class="skeleton w-32 h-32"></div>
             </div>
