--- a/src/app/components/folio/folio.component.html
+++ b/src/app/components/folio/folio.component.html
@@ -141,6 +141,9 @@
             <img src="../../../assets/Python.png" alt="Drink" />
         </div>
         <div class="h-96 carousel-item">
+            <img src="../../../assets/JavaEE.png" alt="Drink" />
+        </div>
+        <div class="h-96 carousel-item">
             <img src="../../../assets/BBDD.png" alt="Drink" />
         </div>
         <div class="h-96 carousel-item">
