--- a/src/app/components/folio/folio.component.html
+++ b/src/app/components/folio/folio.component.html
@@ -183,7 +183,7 @@
             </div>
             <div class="space-y-4">
                 <h3 class="text-xl font-extrabold mb-2">Contact Information</h3>
-                <p><span class="font-extrabold">Email:</span> javierprogrameitor&#64gmail.com</p>
+                <p><span class="font-extrabold">Email:</span> javierprogrameitor&#64;gmail.com</p>
                 <p><span class="font-extrabold">Phone:</span>665935697</p>
                 <p><span class="font-extrabold">Address:</span> Cuba nº9, Talavera`s Real, Spain</p>
                 <div class="skeleton w-32 h-32"></div>
