--- a/src/app/components/folio/folio.component.html
+++ b/src/app/components/folio/folio.component.html
@@ -135,7 +135,7 @@
             <img src="../../../assets/Angular1.png" alt="Drink" />
         </div>
         <div class="h-96 carousel-item">
-            <img src="../../../assets/Angular.png" alt="Drink" />
+            <img src="../../../assets/Frontend1.png" alt="Drink" />
         </div>
         <div class="h-96 carousel-item">
             <img src="../../../assets/Python.png" alt="Drink" />
